# ML-take-home-LFS

./: .gitignore  azuredeploy.json  compose  compose.yaml  deploy-aci.yaml  docker-compose.yaml
ml-client/: Dockerfile
ml-client/src/: utils.ts
ml-client/src/components/Classifier/: Classifier.tsx
ml-client/src/components/ImageLoader/: ImageLoader.tsx
ml-client/src/components/Navbar/: Navbar.tsx
ml-client/src/components/Results/: Results.tsx
ml-server/: Dockerfile  Pipfile  README.md  train.ipynb  train.py
ml-server/app/: app.py
ml-server/app/services/: classifier.py
ml-server/mlmodels/vit-potatoes-plant-health-status/: config.json
ml-server/tests/: test_base.py
ml-trainer/: Pipfile  pyproject.toml  train.ipynb  train.py
