[tool.poetry]
name = "ml-trainer"
version = "0.1.0"
description = ""
authors = ["Marko Grdinić <mrakgr@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_trainer"}]

[tool.poetry.dependencies]
python = "^3.11"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
